<resources>
    <string name="app_name">VASEPPortal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_content">Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel </string>

    <string name="user_name">Delaroy</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="title_activity_feature">FeatureActivity</string>
    <string name="action_search">search</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_report">ReportActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Đa ngôn ngữ-->
    <string name="bt_Highlight">Nổi bật</string>
    <string name="bt_News">Tin tức</string>
    <string name="bt_Report">Báo cáo</string>

    <string name="language">Ngôn ngữ</string>
    <string name="login">Đăng nhập</string>
    <string name="log_out">Đăng xuất</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="market">THỊ TRƯỜNG:</string>
    <string name="product">SẢN PHẨM:</string>

    <string name="report_type1">BÁO CÁO XUẤT KHẨU THỦY SẢN VIỆT NAM</string>
    <string name="report_type2">BÁO CÁO XUẤT KHẨU THỦY SẢN VIỆT NAM (HÀNG QUÝ)</string>
    <string name="report_type3">BÁO CÁO THỊ TRƯỜNG THỦY SẢN</string>

    <string name="btn_submit">LỌC BÁO CÁO</string>
    <string name="btn_ssearch">TÌM KIẾM</string>
    <string name="enter_text">Nhập nội dung tìm kiếm</string>
    <string name="priview">XEM TRƯỚC</string>
    <string name="buy">ĐẶT MUA</string>
    <string name="purchase">THANH TOÁN</string>
    <string name="detail">CHI TIẾT</string>
    <string name="unit_price">Đơn giá: </string>
    <string name="discount">Giảm giá: </string>
    <string name="total">Tổng tiền: </string>
    <string name="option_pay">CHỌN HÌNH THỨC THANH TOÁN</string>
    <string name="bank_transfer">THANH TOÁN QUA NGÂN HÀNG</string>

    <string name="full_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="rep_pass">Nhập lại mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="note">Ghi chú</string>
    <string name="send">Gửi</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="title_sign_up">Đăng ký</string>
    <string name="title_change_pass">Đổi mật khẩu</string>
    <string name="sign_up">Đăng ký tài khoản</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="retype_password">Nhập lại mật khẩu</string>

    <string name="catalog">DANH MỤC</string>
    <string name="contact">LIÊN HỆ</string>
    <string name="Purchare">THANH TOÁN</string>
    <string name="nodata">Không có dữ liệu</string>
    <string name="forgot">Lấy lại mật khẩu</string>
    <string name="title_forgot">Nhập Email</string>

    <string name="login_err">Tên đăng nhập/Mật khẩu không hợp lệ</string>
    <string name="signup_success">Đăng ký tài khoản thành công</string>
    <string name="signup_err">Tên đăng nhập/Mật khẩu không hợp lệ</string>
    <string name="signup_pas">Mật khẩu xác nhận không đúng</string>
    <string name="email_err">Email không đúng</string>

    <string name="pass_old">Mật khẩu cũ</string>
    <string name="pass_new">Mật khẩu mới</string>
    <string name="pass_retype_new">Nhập lại mật khẩu mới</string>

    <string name="visa_mastercard">Thanh toán qua \nVisa-Master card</string>
    <string name="internet_banking">Thanh toán qua \nNgân hàng</string>

    <string name="view_report">Xem báo cáo</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="toast_choose_purchase">Chọn hình thức thanh toán</string>

    <string name="title_total_carts">Tổng đơn</string>
    <string name="title_total_discount_cart">Tổng giảm giá</string>
    <string name="title_total_money_cart">Tổng tiền</string>

    <string name="btn_continue">TIẾP TỤC</string>

    <string name="price_view_online">Giá xem online</string>
    <string name="price_view_download">Giá download</string>
    <string name="btn_view_online">XEM ONLINE</string>
    <string name="btn_view_download">TẢI VỀ</string>
</resources>
