<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.vasep.activity.ContactActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_sign_in"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background_toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sign_up"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/toolbar_title"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textAllCaps="true"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:id="@+id/screen_fullname_signup"
                android:textColorHint="@color/bg_color_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:textColorHint="@color/bg_color_hint"
                android:id="@+id/screen_email_signup" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:textColorHint="@color/bg_color_hint"
                android:id="@+id/screen_user_signup" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:textColorHint="@color/bg_color_hint"
                android:id="@+id/screen7_phone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rep_pass"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:textColorHint="@color/bg_color_hint"
                android:id="@+id/screen_rep_pass_signup" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/background_toolbar"
            android:id="@+id/screen7_send"
            android:layout_width="250dp"
            android:layout_gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_sign_up"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:padding="@dimen/margin_10dp"
                android:textAllCaps="true"

                />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
