<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:gravity="bottom"
            android:layout_margin="@dimen/margin_10dp"
            android:background="@drawable/customborderpay"
            android:textColorHint="#c8c8c8"
            android:padding="@dimen/padding_10dp"
            android:id="@+id/screen10_txt_search"
            />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background_toolbar"
            android:layout_margin="@dimen/margin_10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ssearch"
                android:textAllCaps="true"
                android:gravity="center"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/white"
                android:id="@+id/screen10_btn_search"
                />
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/screen5_color_boder"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/catalog"
            android:textAllCaps="true"
            android:padding="@dimen/margin_10dp"
            android:textColor="@color/background_toolbar"
            android:id="@+id/titl_categorys" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10dp"
            android:id="@+id/rv_search"
            >
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>