<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.vasep.activity.ContactActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_sign_in"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background_toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/toolbar_title"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textAllCaps="true"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:id="@+id/screen_username"
                android:textColorHint="@color/bg_color_hint"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:background="@drawable/custombordercontact"
                android:padding="10dp"
                android:textColorHint="@color/bg_color_hint"
                android:id="@+id/screen_pass"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/background_toolbar"
            android:id="@+id/screen_login"
            android:layout_width="250dp"
            android:layout_gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:padding="@dimen/margin_10dp"
                android:textAllCaps="true"

                />
        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_forgot_pass"
            android:textColor="@color/background_toolbar"
            android:gravity="center_vertical|center"
            android:layout_weight="0.10"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_sign_up"
            android:layout_weight="0.19"
            android:textColor="@color/background_toolbar"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
