<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_allpayment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="250dp"

        android:background="@drawable/border_payment"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:text="@string/price_view_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textColor="@color/black" />

                <TextView
                    android:text="100,000 VNĐ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_view_online"
                    android:gravity="right"
                    android:textColor="@color/screen4_money_item" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:text="@string/price_view_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

                <TextView
                    android:text="100,000 VNĐ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_view_download"
                    android:gravity="right"
                    android:textColor="@color/screen4_money_item" />
                </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:weightSum="2">
                <TextView
                    android:text="@string/btn_view_online"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_view_online"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/bg_border"
                    android:layout_marginRight="@dimen/margin_5dp"
                    android:textColor="@color/white" />

                <TextView
                    android:text="@string/btn_view_download"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_view_download"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="@dimen/margin_5dp"
                    android:textColor="@color/white" />
            </TableRow>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/img_close_dialog"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/close_popup" />
    </RelativeLayout>
</RelativeLayout>
